FullSb1-27-apr-15/src/objects/Employment__c.object
<CustomObject>
    <fields>
        <fullName>AAM_Validated_Most_Recent_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box field is only used by AAMs to validate industry sector, years and month of employment. Only check &apos;true&apos; if validated this information.</description>
        <inlineHelpText>This check box field is only used by AAMs to validate industry sector, years and month of employment. Only check &apos;true&apos; if validated this information.</inlineHelpText>
        <label>AAM Validated Most Recent Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAM_Validated_Overall_Work_Exper_Mos__c</fullName>
        <description>This field is to be used only by the AAMs to put the overall total number of work experience in months in this filed area.</description>
        <inlineHelpText>This field is to be used only by the AAMs to put the overall total number of work experience in months in this filed area.</inlineHelpText>
        <label>AAM Validated Overall Work Exper (Mos)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Override__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Salary_In_USD__c</fullName>
        <label>Annual Salary In USD $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Calculated_work_experience_months__c</fullName>
        <description>DateTo__c - DateFrom__c )/30</description>
        <formula>IF((TEXT(DateTo__c)  &lt;&gt; &quot;&quot;)&amp;&amp;(TEXT(DateFrom__c)&lt;&gt;&quot;&quot;), ((DateTo__c - DateFrom__c)/30),

IF((TEXT(DateTo__c)=&quot;&quot;)&amp;&amp;( isCurrent_Employer__c =TRUE), ((TODAY()-DateFrom__c)/30),

0))</formula>
        <label>Calc.Work Exp.(Mths)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201 -400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001 and above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Employment</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmploymentType__c</fullName>
        <label>Type of Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Part-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Sector__c</fullName>
        <label>Industry Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Accountancy and Financial Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuarial Work, Pensions and Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising, PR and Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal and Plant Resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying, Selling and Retailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity and Development Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Civil Engineering and Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Arts and Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense and Public Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering and Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care and Psychology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality and Events Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import/Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information, Patents and Heritage Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure, Sport and Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media &amp; Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Months</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name of Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position/JobTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibilitesOfJob__c</fullName>
        <label>Summerize the responsibilites of job</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_months_of_work_experience_number_N__c</fullName>
        <label>Calculated Work Experience (Months) NUM</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Months__c</fullName>
        <label>Total Work Experience (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Experience_Years__c</fullName>
        <label>Total Work Experience (Years)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years__c</fullName>
        <label>Total Employment Years</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip/PostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCurrent_Employer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Employer</label>
        <type>Checkbox</type>
    </fields>
    <label>Employment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>